src/components/navbar/navbar.styles.css
.nav {
  width: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 2rem;
  color: var(--primary);
}
.logo {
  width: 100%;
  height: 37px;
}
.nav-m {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}
.nav li {
  display: flex;
  align-items: center;
}

.header-container {
  width: 100%;
  height: fit-content;
  padding-bottom: 20px;
  display: grid;
  place-items: center;
  background: linear-gradient(176.09deg, #280e23 41.71%, #4f0c43 78.32%);
}
.join-btn {
  display: flex;
  justify-content: space-around;
  align-items: center;
  background: #ff32788f;
  border: none;
  color: white;
  padding: 5px 7px;
  text-align: center;
  text-decoration: none;
  font-size: 16px;
  width: fit-content;
  border-radius: 20px;
  filter: drop-shadow(0 0 0.75rem #ff32788f);
}
.svg-round {
  display: grid;
  place-content: center;
  padding-left: center;
  background-color: var(--error);
  background: #ff0057;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
    inset 1px 1px 5px 1px rgba(255, 255, 255, 0.41);
  backdrop-filter: blur(6.5px);
  width: 30px;
  height: 30px;
  border-radius: 50px;
  padding: 2px;
  margin-left: 10px;
}
.toggle-icon {
  display: none;
}
.nav-dropdown {
  width: 100%;
  height: 70vh;
  position: absolute;
  background-color: var(--tertiary-lime);
  z-index: 2;
  left: 0;
  top: 0;
  text-transform: uppercase;
}
.nav-close-btn {
  position: absolute;
  right: 30px;
  top: 20px;
  color: var(--error);
}
.nav-dropdown ul {
  padding: 10px;
  width: inherit;
  height: 80%;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}
.footer-wrapper {
  width: 100%;
}

.footer-container {
  width: 100%;
  min-height: 30vh;
  background-size: 100% 100%;
  background-image: url("/public/images/footerBg.png");
  color: var(--white);
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  align-items: center;
}

.footer-list {
  display: flex;
  align-items: center;
  height: 80%;
}

.outlet-container {
  min-height: 100vh;
}
@media (max-width: 600px) {
  .svg-round {
    margin-left: 5px;
  }
  .join-btn {
    width: fit-content;
    font-size: small;
    padding: 5px 10px;
    margin-right: 10px;
  }
  .nav-item {
    display: none;
  }
  .toggle-icon {
    display: block;
    display: flex;
    width: fit-content;
    align-items: center;
  }
  .footer-container {
    grid-template-columns: repeat(2, 1fr);
    background-image: url("/public/images/mobileFooterBg.png");
    border: 2px solid green;
  }
  .footer-list {
    flex-direction: column;
    align-items: start;
    color: var(--white);
  }
  .footer-socials {
    flex-direction: row;
  }
}

